docs: add API usage examples for agents/knowledge/workflow/collab
- API调用示例.md: curl examples for batch export/import, refresh metadata, job status
- Knowledge task queries, retry, failed task lookup
- Workflow execution with iteration/loop
- Collaboration package creation and status check